--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,54 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: #f7f7ff;
+}
+
 .calculator {
   width: 400px;
   padding: 1rem;
-  background: red;
+  background: #3a454c;
+  border: 2px solid black;
+  border-radius: 0.5rem;
+}
+
+.display {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 2rem;
+  background-color: #d9d9d9;
+  margin-bottom: 1rem;
 }
 
 .btn-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  grid-auto-rows: minmax(60px, auto);
-  background: blue;
+  gap: 0.7rem;
+  grid-auto-rows: minmax(50px, auto);
 }
 
-.clear {
+.btn-clear {
   grid-column: 1 / 3;
-  /* grid-column: 2; */
 }
 
-.delete {
+.btn-delete {
   grid-column: 3 / 5;
+  background-color: #e63946;
 }
 
-.btn {}
+.btn {
+  padding: 1.7rem;
+}
+
+footer {
+  /* padding: 8rem; */
+}
